--- a/multipage/news.html
+++ b/multipage/news.html
@@ -1,1 +1,12 @@
-
+<!doctype html>
+<html>
+  <head>
+    <title>things happening</title>
+  <meta charset="utf-8"/>
+    </head>
+  <body>
+  <p style="color:blue;font-size:20px">
+<strong>MacBook Air </strong>comes in four gorgeous finishes — each with its own matching <i>MagSafe </i>charging cable.
+  </p>
+  </body>
+  </html>
