--- a/multipage/products.html
+++ b/multipage/products.html
@@ -1,1 +1,18 @@
-
+<!doctype html>
+<html>
+  <head>
+    <title>products</title>
+  <meta charset="utf-8"/>
+    </head>
+  <body>
+  <center>
+  <p style="color:orange;font-size:40px;font-family:arial">
+macbook air
+<br><strong>macbook pro 
+<br>ipad pro
+  </strong>
+<br>ipad air
+  </p>
+  </center>
+  </body>
+  </html>
