--- a/multipage/sevices.html
+++ b/multipage/sevices.html
@@ -1,1 +1,16 @@
-
+<!doctype html>
+<html>
+  <head>
+    <title>products</title>
+  <meta charset="utf-8"/>
+    </head>
+  <body>
+  <center>
+  <p style="color:black;font-size:20px;font-family:arial">
+repair
+<br>subscribe
+<br>connect
+  </p>
+  </center>
+  </body>
+  </html>
