--- a/multipage/sevices.html
+++ b/multipage/sevices.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>products</title>
+    <title>services</title>
   <meta charset="utf-8"/>
     </head>
   <body>
