--- a/multipage/index.html
+++ b/multipage/index.html
@@ -1,1 +1,12 @@
-
+<!doctype html>
+<html>
+  <head>
+    <title>homepage</title>
+  <meta charset="utf-8"/>
+    </head>
+  <body>
+  <p style="color:black;font-size:20px;font-family:arial">
+our team/what happening/services/products
+  </p>
+  </body>
+  </html>
