--- a/multipage/index.html
+++ b/multipage/index.html
@@ -3,10 +3,19 @@
   <head>
     <title>homepage</title>
   <meta charset="utf-8"/>
+  <a href="http://piggyu.github.io/multipage/employees.html">our team </a>
+ <br>
+ <a href="http://piggyu.github.io/multipage/services.html">services </a>
+ <br>
+ <a href="http://piggyu.github.io/multipage/news.html">what happening </a>
+ <br>
+ <a href="http://piggyu.github.io/multipage/products.html">products </a>
     </head>
   <body>
-  <p style="color:black;font-size:20px;font-family:arial">
-our team/what happening/services/products
+  
+  <center><p style="color:black;font-size:20px;font-family:arial">
+Hi there!
   </p>
+  </center>
   </body>
   </html>
