--- a/multipage/products.html
+++ b/multipage/products.html
@@ -3,6 +3,13 @@
   <head>
     <title>products</title>
   <meta charset="utf-8"/>
+      <a href="http://piggyu.github.io/multipage/employees.html">our team </a>
+ <br>
+ <a href="http://piggyu.github.io/multipage/services.html">services </a>
+ <br>
+ <a href="http://piggyu.github.io/multipage/news.html">what happening </a>
+ <br>
+ <a href="http://piggyu.github.io/multipage/products.html">products </a>
     </head>
   <body>
   <center>
