--- a/multipage/index.html
+++ b/multipage/index.html
@@ -17,6 +17,7 @@
   
   <center><p style="color:black;font-size:20px;font-family:arial">
 Hi there!
+We should pursue what we love without reluctance😄
   </p>
   </center>
   </body>
