--- a/flashcards/basic/index.html
+++ b/flashcards/basic/index.html
@@ -15,6 +15,6 @@
     next
   </button>
   </table>
-  <script type="text/x-javascript" src="index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
