--- a/flashcards/basic/index.html
+++ b/flashcards/basic/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <script src="index.js"></script>
+   <script src="scripts/index.js"></script>
 </head>
 <body>
   <p id='questionmart' onclick= "showanswer()">
