--- a/flashcards/basic/index.html
+++ b/flashcards/basic/index.html
@@ -15,6 +15,6 @@
     next
   </button>
   </table>
-<script src="index.js"></script>
+<script src="http://raw.githack.com/piggyu/piggyu.github.io/main/flashcards/basic/scripts/index.js"></script>
 </body>
 </html>
