--- a/flashcards4/basic/index.html
+++ b/flashcards4/basic/index.html
@@ -7,9 +7,9 @@
   </p>
   <p id='answermart'>
   </p>
-  <img id='pic1'src="flashcards4/basic/pic/sky.jpeg">
-  <img  id='pic2'src="flashcards4/basic/pic/clock.jpeg">
-  <img id='pic3'src="flashcards4/basic/pic/call.jpeg">
+  <img id='pic1'src="./pic/sky.jpeg">
+  <img  id='pic2'src="./pic/clock.jpeg">
+  <img id='pic3'src="./pic/call.jpeg">
 <table>
   <button id='formerone' onclick="previous()">
     previous
